--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Genetically Modified crops (GM crops) </title>
+    <link rel="icon" href="img/download.jpg" type="image/png">
+    <link rel="stylesheet" href="style.css">
+    <link    href="css/bootstrap.min.css"    rel="stylesheet" >
+    <script src="js/bootstrap.min.js"></script>
+    <style>
+        .div1{
+            height: 100px;
+            width: 600px;
+            border: none;
+            float: left;
+        }
+        .div2{
+            border: none;
+        }
+        #in-farm{
+            float: left;
+            width: 500px;
+            height: 350px;
+        }
+        .learn-more{
+            text-align: center;
+        }
+        .explore{
+            text-align: center;
+        }
+        #button-1{
+            height: auto;
+            width: auto;
+            border-radius: 10px;
+            margin: 20px;   
+            background-color: rgb(150, 150, 255);
+            border: 1px;
+            font-size: large;
+            
+        }
+        #button-1:hover{
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: x-large;
+            font-style: italic;
+            background-color: #ff7777;            
+        }
+    </style>
+</head>
+<body class="body"> 
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: hsl(155, 100%, 30%);">
+        <div class="container-fluid">
+            <a href="index.html" class="navbar-brand"><img src="img/download.jpg" alt="GM crops logo" id="logo" ></a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" 
+            data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="benefits.html" class="nav-item nav-link">Benefits</a>
+                    <a href="risks.html" class="nav-item nav-link">Risks</a>
+                    <a href="gallary.html" class="nav-item nav-link">Gallary</a> 
+                </div>
+            </div>
+        </div>
+    </nav>
+    <br>
+    <div class="div1">
+        <h2>What are GM crops??</h2>
+        <p>Genetically Modified (GM) crops are plants whose genes have been changed using modern science. Scientists add special genes to help crops resist pests, survive droughts, or grow faster.</p>
+    </div>
 
+    <div class="div2">
+        <h2>Why GM Crops Matter</h2>
+        <p>As the world’s population grows, farmers need ways to produce more food safely and efficiently. GM crops can help reduce crop loss, save water, and even improve nutrition.</p>
+    </div><br><br>
+
+    <img src="img/gm crops 1.jpg" alt="GM crops in farm" id="in-farm">  
+    <h2 class="explore">Explore Our Site</h2>
+    <p class="learn-more">Learn how GM crops are made, their advantages, possible risks, and their future in farming. Use the navigation bar to explore each section!</p>
+    <p class="learn-more">🌱 About GM Crops: Learn what GM crops are, how scientists create them, and see examples of popular GM plants used today.</p>
+    <p class="learn-more">💚 Benefits: Explore how GM crops help farmers increase yields, save water, and provide more nutritious food for people around the world.</p>
+    <p class="learn-more">⚠️ Risks and Concerns: Understand the possible environmental, health, and economic issues linked to GM farming.</p>
+    <p class="learn-more">🖼 Gallery: View images of GM crops, research labs, and farming innovations from around the world.</p>
+    <br>
+    
+    <button id="button-1" type="button"><a href="about.html" style="color: black; text-decoration: none;">Learn more</a></button>
+    <button id="button-1"><a href="benefits.html" style="color: black; text-decoration: none;">Benefits</a></button>
+    <button id="button-1"><a href="risks.html" style="color: black; text-decoration: none;">Risks</a></button>
+    <button id="button-1"><a href="gallary.html" style="color: black; text-decoration: none;">Gallery</a></button>
+
+
+
+    <br><br><br><br>
+    <hr><br>    
+    <footer class="footer">
+        <a href="gallary.html" id="link-footer"><</a>
+        <a href="index.html" id="link-footer" class="active">1</a>
+        <a href="about.html" id="link-footer">2</a>
+        <a href="benefits.html" id="link-footer">3</a>
+        <a href="risks.html" id="link-footer">4</a>
+        <a href="gallary.html" id="link-footer">5</a>
+        <a href="about.html" id="link-footer">></a>
+        <br><br><br>
+        <p style="font-size: larger; font-weight: bold;">Copyright &copy;  Scholar</p>
+    </footer>
+</body>
+</html>
